# Gel_Boy

./: IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  main.py  pyproject.toml  test_ui_components.py
docs/: ENHANCED_FEATURES.md  LANE_ANALYSIS.md  NAPARI_MIGRATION.md  api_reference.md  user_guide.md
gel_boy/: __init__.py
gel_boy/core/: __init__.py  band_detection.py  calibration.py  image_processing.py  intensity_analysis.py  lane_detection.py
gel_boy/gui/: __init__.py  main_window.py  napari_main.py  napari_utils.py  napari_widgets.py
gel_boy/gui/dialogs/: __init__.py  calibration.py  crop_dialog.py  intensity_plot_dialog.py  preferences.py  rotate_dialog.py
gel_boy/gui/widgets/: __init__.py  annotation_toolbar.py  brightness_contrast_widget.py  image_viewer.py  intensity_panel.py  intensity_plot.py  intensity_plot_widget.py  lane_editor.py  lane_overlay.py  lane_panel.py  side_panel.py
gel_boy/io/: __init__.py  exporters.py  image_loader.py  project_io.py
gel_boy/models/: __init__.py  band.py  gel_image.py  lane.py  project.py
gel_boy/utils/: __init__.py  constants.py  helpers.py
tests/: __init__.py  test_16bit_support.py  test_band_detection.py  test_coordinate_debugging.py  test_cumulative_transformations.py  test_enhanced_image_processing.py  test_image_loader.py  test_image_processing.py  test_image_viewer.py  test_intensity_analysis.py  test_intensity_profile_validation.py  test_lane_detection.py  test_napari_integration.py  test_new_image_processing.py
